// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writeConfig > snapshot: config with sitemap 1`] = `
"// auto-generated by Solas

import type { RuntimeConfig } from '@jk2908/solas'

const config = {
	url: 'https://example.com',
	sitemap: true
} as const satisfies RuntimeConfig


export { config }
"
`;

exports[`writeConfig > snapshot: full config 1`] = `
"// auto-generated by Solas

import type { RuntimeConfig } from '@jk2908/solas'
import { Logger } from '@jk2908/solas/utils/logger'

const config = {
	url: 'https://example.com',
	trailingSlash: 'always',
	precompress: true,
	prerender: 'full',
	metadata: {
		title: 'My Site'
	},
	logger: {
		level: 'debug'
	},
	trustedOrigins: ['https://cdn.example.com']
} as const satisfies RuntimeConfig
Logger.defaultLevel = 'debug'

export { config }
"
`;

exports[`writeConfig > snapshot: minimal config 1`] = `
"// auto-generated by Solas

import type { RuntimeConfig } from '@jk2908/solas'

const config = {
	trailingSlash: 'never'
} as const satisfies RuntimeConfig


export { config }
"
`;
